kyro序列化方式引入；server和client的全面异步化；初步压测和极限QPS测试（目前极限在8w左右）；通过装饰器允许服务切换在io线程内外执行；为UserService测试服务设计比较完善的redis分布式锁和选举持久化机制以供测试。